# mpulse-challenge

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 9a1f49a7045e_create_members_table.py  aa7b71c01d35_create_account_and_member_account_tables.py
scripts/: entrypoint.sh  test.sh
src/: conftest.py  main.py
src/account/: models.py  queries_db.py  test_queries_db.py
src/db/: db.py
src/ingestion/: bulk_member_ingestion.py
src/member/: models.py  queries_db.py  test_queries_db.py
src/utils/: list_helpers.py
