[tool.poetry]
name = "mpulse-challenge"
version = "0.1.0"
description = ""
authors = ["Jeff Skelton <jeff@jeffskelton.net>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
